--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,103 @@
-RewriteEngine On
+# Bela-Bela Institute - Apache Configuration
 
-# Skip existing files and folders
-RewriteCond %{REQUEST_FILENAME} -f [OR]
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^ - [L]
+# Enable Rewrite Engine
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    
+    # Set RewriteBase to your project root
+    # For XAMPP with project in htdocs/bela-bela-institute, use:
+    RewriteBase /bela-bela-institute/
+    # If your project is in document root, use: RewriteBase /
+    # Adjust this based on your actual setup
+    
+    # Force HTTPS in production (uncomment when SSL is configured)
+    # RewriteCond %{HTTPS} off
+    # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    
+    # Remove .php extension from URLs (external redirect - optional)
+    # Uncomment if you want to redirect /file.php to /file
+    # RewriteCond %{THE_REQUEST} \s/+(.+?)\.php[\s?] [NC]
+    # RewriteRule ^ /%1 [R=301,L]
+    
+    # Add .php extension internally if file exists (without extension)
+    # Skip if the request is for a file that already exists
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    # Check if the .php version exists
+    RewriteCond %{REQUEST_FILENAME}.php -f
+    # Rewrite to add .php extension (preserve query string)
+    RewriteRule ^(.*)$ $1.php [L,QSA]
+    
+    # Prevent directory listing
+    Options -Indexes
+</IfModule>
 
-# Redirect .php URLs to extensionless
-RewriteCond %{THE_REQUEST} \s/([^\s]+)\.php[\s?] [NC]
-RewriteRule ^ %1 [R=301,L]
+# Security Headers
+<IfModule mod_headers.c>
+    # Prevent clickjacking
+    Header set X-Frame-Options "SAMEORIGIN"
+    
+    # XSS Protection
+    Header set X-XSS-Protection "1; mode=block"
+    
+    # Prevent MIME type sniffing
+    Header set X-Content-Type-Options "nosniff"
+    
+    # Referrer Policy
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+    
+    # Content Security Policy (adjust as needed)
+    # Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';"
+</IfModule>
 
-# Internally rewrite extensionless URLs to .php
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.+)$ $1.php [L]
+# PHP Configuration
+<IfModule mod_php7.c>
+    # Hide PHP version
+    php_flag expose_php off
+    
+    # Increase upload limits (adjust as needed)
+    php_value upload_max_filesize 10M
+    php_value post_max_size 10M
+    php_value max_execution_time 300
+    php_value max_input_time 300
+</IfModule>
+
+# Protect sensitive files
+<FilesMatch "\.(env|log|sql|md)$">
+    Order allow,deny
+    Deny from all
+</FilesMatch>
+
+# Protect configuration files
+<FilesMatch "^(config|bootstrap|\.git)">
+    Order allow,deny
+    Deny from all
+</FilesMatch>
+
+# Prevent access to hidden files
+<FilesMatch "^\.">
+    Order allow,deny
+    Deny from all
+</FilesMatch>
+
+# Cache static assets
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/webp "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+</IfModule>
+
+# Gzip compression
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/json
+</IfModule>
+
+# Custom error pages (optional)
+# ErrorDocument 404 /404.php
+# ErrorDocument 500 /500.php
+# ErrorDocument 403 /403.php
